k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-app-service
  labels:
    app: devsecops-app
spec:
  selector:
    app: devsecops-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
